--- a/books.bib
+++ b/books.bib
@@ -22,4 +22,60 @@ year = {2010},
 url = {https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/}
 }
 
+@misc{beck2001agile,
+  added-at = {2007-12-30T11:39:05.000+0100},
+  author = {Beck, Kent and Beedle, Mike and van Bennekum, Arie and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Grenning, James and Highsmith, Jim and Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Robert C. and Mellor, Steve and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave},
+  biburl = {http://www.bibsonomy.org/bibtex/28954248a545d88dd2c0e688d1c7e2f9d/juve},
+  booktitle = {Manifesto for Agile Software Development},
+  description = {Manifesto for Agile Software Development},
+  interhash = {098cc7e185f10c3da390459a01e0d535},
+  intrahash = {8954248a545d88dd2c0e688d1c7e2f9d},
+  keywords = {imported},
+  timestamp = {2007-12-30T11:39:05.000+0100},
+  title = {Manifesto for Agile Software Development},
+  url = {http://www.agilemanifesto.org/},
+  year = 2001
+}
+
+@book{beck2003test,
+  title={Test-driven development: by example},
+  author={Beck, Kent},
+  year={2003},
+  publisher={Addison-Wesley Professional}
+}
+
+@book{martin2008clean,
+  title={Clean Code: A Handbook of Agile Software Craftsmanship},
+  author={Martin, R.C.},
+  isbn={9780136083252},
+  url={http://books.google.fi/books?id=\_i6bDeoCQzsC},
+  year={2008},
+  publisher={Pearson Education}
+}
+
+@ONLINE{ISOBlog,
+author = {Roelof Reitsma},
+title = {Software has a new quality standard: ISO 25010},
+year = {2011},
+url = {http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html}
+}
+
+@book{ries2011lean,
+  title={The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses},
+  author={Ries, E.},
+  isbn={9780307887894},
+  lccn={2011012100},
+  series={The Lean Startup: How Today's Entrepreneurs Use Continuous Innovation to Create Radically Successful Businesses},
+  url={http://books.google.fi/books?id=r9x-OXdzpPcC},
+  year={2011},
+  publisher={Crown Business}
+}
+
+
+@ONLINE{blank2010startup,
+author = {Steve Blank},
+title = {What’s A Startup? First Principles.},
+year = {2010},
+url = {http://steveblank.com/2010/01/25/whats-a-startup-first-principles/}
+}
 
