Added some Jamaican stuff

--- a/books.bib
+++ b/books.bib
@@ -79,3 +79,12 @@ year = {2010},
 url = {http://steveblank.com/2010/01/25/whats-a-startup-first-principles/}
 }
 
+
+@ONLINE{campionDescCheck,
+author = {O'Neil Hibbert, Campion College},
+title = {Desk Check Guide},
+url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-solving-and-programming/desk-check-guide}
+}
+
+
+
