--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -1,5 +1,5 @@
 
- \section{QA methods and processes used}
+ \section{QA Methods and Processes Used}
  
  \begin{itemize}
  
@@ -10,7 +10,7 @@ Static code analysis (IDEn vakiot), Communication ("embedded users"), Testing(fr
 
  \end{itemize}
  
- \section{Achieved quality in the project}
+ \section{Achieved Quality in The Project}
 
  \begin{itemize}
  
