--- a/improving/c_improving.tex
+++ b/improving/c_improving.tex
@@ -1,18 +1,18 @@
 
- \section{Methods for improving quality}
+ \chapter{Improving Software Quality}
  
 Quality of a software product can be influenced throughout its life cycle with multiple approaches. Pursuing high quality means having methods in use for both decreasing the amount of defects and maintaining good structural quality. In addition to these technical approaches, projects should have methods to assure high quality of specification and implementation process. Methods for improving quality can be split into defect prevention methods, pretest methods, testing and post-release methods. Preventive and pretest methods contain actions such as reviews, inspections and audits. Testing includes various types of testing the functionality. Post-release methods focus on maintainability, defect discovery and defect repairing.
 
 % ROI: Three main activities: Review, process audit and testing
 
-\input{quality/ss_life-cycle}
+\input{improving/s_life-cycle}
 
-\input{quality/ss_preventing}
+\input{improving/s_preventing}
 
-\input{quality/ss_pretest}
+\input{improving/s_pretest}
  
-\input{quality/ss_testing}
+\input{improving/s_testing}
  
-\input{quality/ss_post_release}
+\input{improving/s_post_release}
  
 
