--- a/qa_startup/c_qa_startup.tex
+++ b/qa_startup/c_qa_startup.tex
@@ -1,5 +1,5 @@
 
- \chapter{Quality Assurance in software startup project}
+ \chapter{Quality Assurance in Software Startup Project}
 
 \input{qa_startup/s_startup}
 
