--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -1,5 +1,5 @@
 
- \section{Evaluation of QA methods}
+ \section{Evaluation of QA Methods}
  
 MILLÄ MENESTYKSELLÄ TEHDÄÄN JA KUINKA SOPII TÄHÄN SCOPEEN
 
@@ -28,11 +28,11 @@ PREVENTIVE
 
  \end{itemize}
  
- \subsection{Methods in different phases of the life cycle}
+ \subsection{Methods in Different Phases of the Life Cycle}
  
- \subsection{Point of diminishing returns}
+ \subsection{Point of Diminishing Returns}
  
- \subsection{The Don'ts - Things to avoid}
+ \subsection{The Don'ts - Things To Avoid}
  
  \begin{itemize}
  
