--- a/quality/s_quality_general.tex
+++ b/quality/s_quality_general.tex
@@ -1,12 +1,10 @@
-\section{Software quality in General}
+\section{Software Quality in General}
 
-Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. The American Society for Quality has two definitions for technical quality: 1. the product's ability to satisfy its needs; 2. the product's lack of deficiencies~\cite{ASQglossary}
- 
+Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. The American Society for Quality has two definitions for technical quality: 1. the product's ability to satisfy its needs; 2. the product's lack of deficiencies~\cite{ASQglossary}. Software is one of the most used types of product in human history. At the same time it has one of the highest failure rates of any type of products mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak on behalf of quality.
+
+TODO: Ylläolevalle pitäis tehdä jotain 
 
 \subsection{Motivation}
-
-% \ Chapter 1, software has become..
-Software is one of the most used types of product in human history. At the same time it has one of the highest failure rates of any type of products mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak on behalf of quality.
 
 Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free" [VIITE Quality is free]. Even though Crosby's concept is used mainly in the manufacturing sector, it has some truth that can be applied to the software business.  In addition, the "cost of quality" is a slightly inappropriate term, considering that quality in itself doesn't create costs but the lack of it does. 
 
@@ -21,7 +19,7 @@ Jones expresses concerns towards the poor measurement of software quality causin
 
  
 
-\subsection{Software quality defined}
+\subsection{Software Quality Defined}
 
 % ECO: Chapter 1
 The word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
