--- a/qa_startup/s_startup.tex
+++ b/qa_startup/s_startup.tex
@@ -3,7 +3,7 @@
 
 Startup is a term that became popular during the dotcom bubble, when a great number of companies were founded to do business on the Internet. Steve Blank lists some principles of a startup in his blog post "What’s A Startup? First Principles.". Blank defines a startup as "an organization formed to search for a repeatable and scalable business model". The first goal for a business model can be revenue, profits, users or click-throughs. The business model must be quickly and constantly tested and iterated by using Agile Development. Blank also tells that the business model of most startups is changed multiple times.~\cite{blank2010startup}
 
- \subsection{Lean startup}
+ \subsection{Lean Startup}
  
 Lean Startup is a movement pioneered by Eric Ries, which brings the principles of lean manufacturing to the context of entrepreneurship. Like the lean manufacturing is measuring progress also the lean startup measures its progress for discovering and eliminating the sources of waste. Lean manufacturing measures the progress by the production of high-quality goods, whereas in lean startup, the unit of progress in lean startup is something Ries calls validated learning.
 
@@ -19,9 +19,18 @@ Lean Startup has got 5 principles.
 -Build-Measure-Learn
 -Innovation accounting
 
+
+% Quality p.106-110
+% MVP voi olla "low-quality", jos rakennetaan "high-quality" tuotetta
+% Asiakkaan mielestä MVP voi olla low quality, mutta siitä voidaan oppia mistä ominaisuuksista asiakas pitää
+% "If we dont know who the customer is, we do not know what quality is"
+% 
+
+-Datan keruu & oppiminen
+
 ~\cite{ries2011lean}
 
- \subsection{Life cycle}
+ \subsection{Life Cycle}
 
  \begin{itemize}
 
